<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/layout1"
        android:text="0"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textscreen">
        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonC"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonDiv"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/buttonMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonMult"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/buttonBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonBack"
            android:layout_marginLeft="0dp"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button7"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button8"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button9"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/buttonSum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonSum"
            android:layout_marginLeft="0dp"></Button>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button4"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button5"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button6"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/buttonSub"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonSub"
            android:layout_marginLeft="0dp"></Button>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout3">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button1"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button2"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button3"
            android:layout_marginLeft="0dp"></Button>
        <Button
        android:id="@+id/buttonPlusMinus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonPlusMinus"
        android:layout_marginLeft="0dp"></Button>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout4">
        <Button
            android:id="@+id/buttonPlusMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonPlusMinus"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button0"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button3"
            android:layout_marginLeft="0dp"></Button>
        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonEqual"
            android:layout_marginLeft="0dp"></Button>


    </LinearLayout>
</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>